# lucy

./: .gitignore  README.md  app.py  automation.py  config.json  context.py  main.py  pyproject.toml  requirements.txt  task_generator.py  test_helper.py
data/completions/: billy_aaaa_conv.json  colin_aaaa_conv.json  debo_aaaa_conv.json  doris_aaaa_conv.json  dorothy_aaaa_conv.json  dorothy_test22_conv.json  doug_aaaa_conv.json  glinda_aaaa_conv.json  glinda_test22_conv.json  lucy_aaaa_conv.json  lucy_cli_conv.json  lucy_test22_conv.json  maria_aaaa_conv.json  pedro_aaaa_conv.json
data/prompts/: colin_aaaa_conv.json  dorothy_aaaa_conv.json  glinda_aaaa_conv.json  lucy_aaaa_conv.json  maria_aaaa_conv.json  pedro_aaaa_conv.json
docs/: agents.md  examples.md  keyclasses.md  prompt.json  testcase1.md
src/: agent_manager.py  api_helpers.py  config_manager.py  container_config.py  folder_processor.py  glinda_request_handler.py  goal.py  goal_manager.py  hierarchical_node.py  keywords.py  message_preProcess.py  message_processor.py  message_processor_store.py  node_manager.py  preset_handler.py  preset_prompts.py  prompt_manager.py  prompt_store.py  response_handler.py  source_code_response_handler.py  summarize_request_handler.py  summarize_text_content.py  text_comparator.py
src/chunkers/: chuncked_file_processor.py  (+2 more)
static/: swagger.json
tests/: test_app.py  test_completion.py  test_completions_manager.py  test_goal.py  test_hierarchical_node.py  test_keywords.py  test_message.py  test_node_manager.py  test_prompt_manager.py  test_source_code_response_handler.py
(+34 files in other folders)
