[tool.poetry]
name = "lucy"
version = "0.1.0"
description = "a chat agent based that uses openai completion"
authors = ["junwin <jdunwin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
